--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ncryptor",
-  "version": "1.0.4",
-  "description": "A Password Hashing Tool which encrypt and decrypt password based on a Quantum-Resistant Adaptive Memory-Hard Function (QR-AMHF) Alogorithn",
+  "version": "1.0.6",
+  "description": "A Password Hashing Tool which encrypt and decrypt password based new hashing algorithm called QuantumWave that uses a unique approach combining temporal entropy, fractal mixing, and multi-dimensional state transformations",
   "main": "ncryptor.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
